--- a/index.html
+++ b/index.html
@@ -15,17 +15,7 @@
                 <li><a onclick="route('products')">Products</a></li>
             </ul>
         </nav>
-        <main>
-            <section id="home" style="display: none;">
-                <h1>Home page content</h1>
-            </section>
-            <section id="about" style="display: none;">
-                <h1>About page content</h1>
-            </section>
-            <section id="products" style="display: none;">
-                <h1>Products page content</h1>
-            </section>
-        </main>
+        <main id="root"></main>
     </body>
     <script src="routrer.js"></script>
     <script src="components/home/script.js"></script>
